<resources>
    <string name="app_name">Sandcrab Dictionary</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_demo_word">Sandcrab</string>
    <string name="text_demo_meaning">the occurrence of a sudden discharge (as of liquid) someone who is small and insignificant</string>
    <string name="text_recent_words">Recent Words</string>
    <string name="text_random_words">Random Words</string>
    <string name="text_demo_ipa">/wɜːk/</string>
    <string name="text_app_version">Version 1.0.0</string>
    <string name="text_favourite">Favourite</string>
    <string name="text_setting">Setting</string>
    <string name="text_about">About</string>
    <string name="text_contribution">Contribution</string>
    <string name="text_watch_ads">Watch Ads</string>
    <string name="text_place_holder">Type word</string>

    <string name="admod_banner_top">ca-app-pub-2499028768274374/7188924146</string>
    <string name="admod_banner_bottom">ca-app-pub-2499028768274374/9245253608</string>
    <string name="admod_test_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="admod_intersttial_test_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="admod_app_id">ca-app-pub-2499028768274374~7385377028</string>
    <string name="admod_interstitial_id">ca-app-pub-2499028768274374/9631587796</string>
    <string name="text_demo_word_type">VERB</string>
    <string name="text_region_en">EN</string>

</resources>
