<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/singleEntryLayoutWord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:padding="0dp"
            android:text="@string/text_demo_word"
            android:textColor="@android:color/black"
            android:textSize="45sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_alignLeft="@id/singleEntryLayoutWord"
            android:id="@+id/singleEntryLayoutIPA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_below="@id/singleEntryLayoutWord"
            android:text="@string/text_demo_ipa"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="normal" />

        <TextView
            android:layout_alignBottom="@id/singleEntryLayoutSound"
            android:id="@+id/singleEntryLayoutRegion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_below="@id/singleEntryLayoutWord"
            android:layout_toRightOf="@id/singleEntryLayoutSound"
            android:text="@string/text_region_en"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="20sp"
            android:textStyle="normal" />

        <TextView
            android:paddingStart="5dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:id="@+id/singleEntryLayoutType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/word_type_background"
            android:layout_below="@id/singleEntryLayoutIPA"
            android:text="@string/text_demo_word_type"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="normal" />

        <ImageButton
            android:id="@+id/singleEntryLayoutSound"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_toRightOf="@id/singleEntryLayoutIPA"
            android:layout_below="@id/singleEntryLayoutWord"
            android:layout_marginStart="40dp"
            android:background="@null"
            android:scaleType="fitXY"
            android:src="@drawable/speaker_background" />

        <ImageButton
            android:id="@+id/singleEntryLayoutLike"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="30dp"
            android:layout_alignTop="@id/singleEntryLayoutWord"
            android:layout_alignBottom="@id/singleEntryLayoutWord"
            android:background="@null"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_favorite_border_blue_24dp" />

        <TextView
            android:layout_alignLeft="@id/singleEntryLayoutType"
            android:layout_marginStart="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:id="@+id/singleEntryLayoutWordDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/singleEntryLayoutType"
            android:text="@string/text_demo_meaning"
            android:textSize="18sp"
            android:textStyle="normal" />

    </RelativeLayout>
</layout>
